--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
                         <input type="text" name="city" id="city" class="form-control" placeholder="your city (required)">
                     </div>
                     <div class="col-sm-2">
-                        <select name="state" class="form-control">
+                        <select name="state" id="state" class="form-control">
                             <option value="" selected disabled>state (req)</option>
                         </select>
                     </div>
                     <div class="col-sm-3">
-                        <input type="text" name="zip" class="form-control" placeholder="zip code (required)">
+                        <input type="text" name="zip" id="zip" class="form-control" placeholder="zip code (required)">
+                    </div>
+                    <div class="col-sm-10">
+                        <p id="zipMessage" class="error-message"></p>
                     </div>
                 </div>
 
@@ -90,7 +93,7 @@
                         </select>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" name="occupationOther" class="form-control" placeholder="what do you mean by other?">
+                        <input type="text" name="occupationOther" id="occupationOther" class="form-control" placeholder="what do you mean by other?">
                     </div>
                 </div>
 
@@ -113,7 +116,7 @@
 
             </form>
         </div> <!-- .container -->
-
+        <script src="js/bootstrap.js"></script>
         <script src="js/us-states.js"></script>
         <script src="js/signup.js"></script>
     </body>
